--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@ description = ""
 requires-python = ">=3.11"
 
 dependencies = [
+    "alembic>=1.17.2",
     "fastapi",
+    "pydantic[email]>=2.12.5",
+    "pydantic-settings>=2.12.0",
     "sqlalchemy>=2.0.45",
     "uvicorn[standard]",
+    "argon2-cffi>=25.1.0",
+    "authlib>=1.6.6",
+    "pymysql>=1.1.2",
 ]
