--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "authlib>=1.6.6",
     "pymysql>=1.1.2",
+    "httpx>=0.28.1",
+    "itsdangerous>=2.2.0",
 ]
