Change into async

--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -18,6 +18,36 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # ✅ requirements 최신인지 먼저 검사 (여기서 실패하면 빌드/배포 안 감)
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install uv
+        run: |
+          python -m pip install -U pip
+          pip install uv
+
+            - name: Check requirements.txt is up to date
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          OUT="/tmp/requirements.txt.generated"
+          uv export --format requirements-txt --locked --no-dev -o "$OUT"
+
+          if ! diff -u requirements.txt "$OUT"; then
+            echo ""
+            echo "❌ requirements.txt가 최신이 아닙니다."
+            echo "아래를 로컬에서 실행한 뒤 변경된 requirements.txt를 커밋하세요:"
+            echo ""
+            echo "  make reqs"
+            echo ""
+            exit 1
+          fi
+
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
