--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,49 +1,16 @@
-# ======================
-# App
-# ======================
-APP_ENV=dev
-APP_NAME=waffle-toy-project
-DEBUG=true
-
-# ======================
-# Server
-# ======================
-HOST=0.0.0.0
-PORT=8000
-
-# ======================
-# Security / JWT
-# ======================
-JWT_SECRET_KEY=CHANGE_ME_DEV_SECRET
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
-JWT_REFRESH_TOKEN_EXPIRE_DAYS=30
-
-# ======================
-# Database (DEV)
-# ======================
-DB_DRIVER=mysql+asyncmy
-DB_HOST=dev-db.xxxxx.ap-northeast-2.rds.amazonaws.com
+DB_DIALECT=mysql
+DB_DRIVER=aiomysql
+DB_HOST=
 DB_PORT=3306
-DB_NAME=team9_dev
-DB_USER=team9_dev_user
-DB_PASSWORD=CHANGE_ME_DEV_DB_PASSWORD
 
-# SQLAlchemy
-DATABASE_URL=mysql+asyncmy://team9_dev_user:CHANGE_ME_DEV_DB_PASSWORD@dev-db.xxxxx.ap-northeast-2.rds.amazonaws.com:3306/team9_dev
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
 
-# ======================
-# CORS
-# ======================
-CORS_ORIGINS=http://localhost:3000,https://dev.server.team9-toy-project.p-e.kr
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-# ======================
-# Logging
-# ======================
-LOG_LEVEL=DEBUG
-
-# ======================
-# Dev-only Options
-# ======================
-# TEST_MODE=true
-# SEED_DATA=true
+FRONTEND_URL=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+SESSION_SECRET=
