--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,51 +1,16 @@
-# ======================
-# App
-# ======================
-APP_ENV=prod
-APP_NAME=waffle-toy-project
-DEBUG=false
-
-# ======================
-# Server
-# ======================
-HOST=0.0.0.0
-PORT=8000
-
-# ======================
-# Security / JWT
-# ======================
-JWT_SECRET_KEY=CHANGE_ME_PROD_SUPER_SECRET
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
-JWT_REFRESH_TOKEN_EXPIRE_DAYS=14
-
-# ======================
-# Database (PROD)
-# ======================
-DB_DRIVER=mysql+asyncmy
-DB_HOST=prod-db.xxxxx.ap-northeast-2.rds.amazonaws.com
+DB_DIALECT=mysql
+DB_DRIVER=aiomysql
+DB_HOST=
 DB_PORT=3306
-DB_NAME=team9_prod
-DB_USER=team9_prod_user
-DB_PASSWORD=CHANGE_ME_PROD_DB_PASSWORD
 
-# SQLAlchemy
-DATABASE_URL=mysql+asyncmy://team9_prod_user:CHANGE_ME_PROD_DB_PASSWORD@prod-db.xxxxx.ap-northeast-2.rds.amazonaws.com:3306/team9_prod
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
 
-# ======================
-# CORS
-# ======================
-CORS_ORIGINS=https://server.team9-toy-project.p-e.kr
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-# ======================
-# Logging
-# ======================
-LOG_LEVEL=INFO
-
-# ======================
-# External Services (optional)
-# ======================
-# AWS_S3_BUCKET=
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_REGION=ap-northeast-2
+FRONTEND_URL=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+SESSION_SECRET=
