--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # ✅ requirements 최신인지 먼저 검사 (여기서 실패하면 빌드/배포 안 감)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -29,24 +28,22 @@ jobs:
           python -m pip install -U pip
           pip install uv
 
-            - name: Check requirements.txt is up to date
+      # ✅ 들여쓰기 수정 완료
+      - name: Check requirements.txt is up to date
         shell: bash
         run: |
           set -euo pipefail
-
           OUT="/tmp/requirements.txt.generated"
           uv export --format requirements-txt --locked --no-dev -o "$OUT"
-
           if ! diff -u requirements.txt "$OUT"; then
             echo ""
             echo "❌ requirements.txt가 최신이 아닙니다."
             echo "아래를 로컬에서 실행한 뒤 변경된 requirements.txt를 커밋하세요:"
             echo ""
-            echo "  make reqs"
+            echo "   make reqs"
             echo ""
             exit 1
           fi
-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -89,76 +86,54 @@ jobs:
             set -euo pipefail
             mkdir -p ~/deploy
 
-            # 공통(DEV/PROD 동일) 값들
             DB_DIALECT="${{ secrets.DB_DIALECT }}"
             DB_DRIVER="${{ secrets.DB_DRIVER }}"
             DB_HOST="${{ secrets.DB_HOST }}"
             DB_PORT="${{ secrets.DB_PORT }}"
-
             GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
             GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
 
             if [ "${{ steps.meta.outputs.target }}" = "dev" ]; then
               cat > ~/deploy/.env.dev <<EOF
-            # ---- DB (common) ----
             DB_DIALECT=${DB_DIALECT}
             DB_DRIVER=${DB_DRIVER}
             DB_HOST=${DB_HOST}
             DB_PORT=${DB_PORT}
-
-            # ---- DB (dev) ----
             DB_USER=${{ secrets.DB_USER_DEV }}
             DB_PASSWORD=${{ secrets.DB_PASSWORD_DEV }}
             DB_DATABASE=${{ secrets.DB_DATABASE_DEV }}
-
-            # ---- AUTH (common) ----
             GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
             GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-
-            # ---- AUTH (dev) ----
             FRONTEND_URL=${{ secrets.FRONTEND_URL_DEV }}
             ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET_DEV }}
             REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET_DEV }}
             SESSION_SECRET=${{ secrets.SESSION_SECRET_DEV }}
             EOF
-
               chmod 600 ~/deploy/.env.dev
-
               cd ~/deploy
               docker compose pull api_dev
               docker compose up -d --force-recreate api_dev
               docker compose restart nginx
-
             else
               cat > ~/deploy/.env.prod <<EOF
-            # ---- DB (common) ----
             DB_DIALECT=${DB_DIALECT}
             DB_DRIVER=${DB_DRIVER}
             DB_HOST=${DB_HOST}
             DB_PORT=${DB_PORT}
-
-            # ---- DB (prod) ----
             DB_USER=${{ secrets.DB_USER_PROD }}
             DB_PASSWORD=${{ secrets.DB_PASSWORD_PROD }}
             DB_DATABASE=${{ secrets.DB_DATABASE_PROD }}
-
-            # ---- AUTH (common) ----
             GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
             GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-
-            # ---- AUTH (prod) ----
             FRONTEND_URL=${{ secrets.FRONTEND_URL_PROD }}
             ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET_PROD }}
             REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET_PROD }}
             SESSION_SECRET=${{ secrets.SESSION_SECRET_PROD }}
             EOF
-
               chmod 600 ~/deploy/.env.prod
-
               cd ~/deploy
               docker compose pull api_prod
               docker compose up -d --force-recreate api_prod
               docker compose restart nginx
             fi
-
             docker ps --format "table {{.Names}}\t{{.Image}}\t{{.Status}}"
