--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,16 +1,17 @@
 DB_DIALECT=mysql
 DB_DRIVER=aiomysql
-DB_HOST=
+DB_HOST=127.0.0.1
 DB_PORT=3306
 
 DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=local
+GOOGLE_CLIENT_SECRET=local
 
-FRONTEND_URL=
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
-SESSION_SECRET=
+FRONTEND_URL=http://localhost:3000
+
+ACCESS_TOKEN_SECRET=local_access_secret_please_change
+REFRESH_TOKEN_SECRET=local_refresh_secret_please_change
+SESSION_SECRET=local_session_secret_please_change
