Set DEV environment variable in files

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,3 +1,4 @@
+ENV=dev
 DB_DIALECT=mysql
 DB_DRIVER=aiomysql
 DB_HOST=127.0.0.1
@@ -10,7 +11,7 @@ DB_DATABASE=
 GOOGLE_CLIENT_ID=local
 GOOGLE_CLIENT_SECRET=local
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://23-5-team9-web.vercel.app/login
 
 ACCESS_TOKEN_SECRET=local_access_secret_please_change
 REFRESH_TOKEN_SECRET=local_refresh_secret_please_change
