Separate Host from Frontend URL

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -11,7 +11,7 @@ DB_DATABASE=
 GOOGLE_CLIENT_ID=local
 GOOGLE_CLIENT_SECRET=local
 
-FRONTEND_URL=https://23-5-team9-web.vercel.app/login
+FRONTEND_URL=https://wafflestudio.github.io/23-5-team9-web
 
 ACCESS_TOKEN_SECRET=local_access_secret_please_change
 REFRESH_TOKEN_SECRET=local_refresh_secret_please_change
