--- a/requirements.txt
+++ b/requirements.txt
@@ -127,3 +127,5 @@ six==1.16.0
     # via python-dateutil
 urllib3==2.2.2
     # via botocore
+python-multipart==0.0.9
+    # via waffle-toy-project
