--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,6 @@ dependencies = [
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
     "aiomysql>=0.2.0",
+    "boto3>=1.42.35",
+    "python-multipart>=0.0.22",
 ]
