--- a/requirements.txt
+++ b/requirements.txt
@@ -113,3 +113,17 @@ watchfiles==1.1.1
     # via uvicorn
 websockets==15.0.1
     # via uvicorn
+boto3==1.34.131
+    # via waffle-toy-project
+botocore==1.34.131
+    # via boto3
+jmespath==1.0.1
+    # via boto3
+s3transfer==0.10.1
+    # via boto3
+python-dateutil==2.9.0.post0
+    # via botocore
+six==1.16.0
+    # via python-dateutil
+urllib3==2.2.2
+    # via botocore
