--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mysql+pymysql://root:900592@localhost:3306/waffle_toy_db
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
